--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 title: Our team
 description: >-
-  We've built an amazing, fantastic team of developers, marketers, designers and
+  We've built..... an amazing, fantastic team of developers, marketers, designers and
   sales people.
 ---
 
