--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ description: We'd love to help you improve your sales.
 map:
   latitude: -45.8787605
   longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
+  address: "Heiderstr. 11 41844 Wegberg NRW"
   zoom: 13
 ---
 <div class="map" id="map"></div>
@@ -34,7 +34,7 @@ map:
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 		<h3 class="editable">Email</h3>
-		<p><a href="mailto:support@example.com">support@example.com</a></p>
+		<p><a href="mailto:support@example.com">MARCEL.VREULS@OUTLOOK.COM</a></p>
 	</div>
 </div>
 
