--- a/pricing.html
+++ b/pricing.html
@@ -24,7 +24,7 @@ pricing_table:
   
 faq:
   - question: What types of payment do you accept?
-    answer: Credit cards including MasterCard, Visa or American Express.
+    answer: We accept Paypal and bank transfers.
   - question: Can I change my plan at a later time?
     answer: Yes, you can upgrade and downgrade your plan at anytime.
   - question: Do you offer pricing for nonprofit organizations?
