check if the flows works

--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@ pricing_table:
       - text: Sales map
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=basic
+      link: http://ds.com?plan=basic
       text: Get started
   
 faq:
